gccida/c2/add_location_or_const_value_attribute
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/dwarf2out.c:9491:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)v16] != MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/dwarf2out.c:9497:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
r.r[2] = ( __int64)v4[2]; 
                   ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/dwarf2out.c:9500:14: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etartdouble( v18, r); 
             ^~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/real.h:162:50: note: passing argument to parameter here
extern void etartdouble         PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/dwarf2out.c:9502:14: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etarldouble( v18, r); 
             ^~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/real.h:163:50: note: passing argument to parameter here
extern void etarldouble         PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/dwarf2out.c:9506:13: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etardouble( v18, *( realvaluetype *)&v4[1]); 
            ^~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/real.h:164:49: note: passing argument to parameter here
extern void etardouble          PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/dwarf2out.c:9538:4: error: incomplete definition of type 'struct hash_table'
v11->alloc_node = indirect_string_alloc; 
~~~^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/ggc.h:33:8: note: forward declaration of 'struct hash_table'
struct hash_table;
       ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/add_location_or_const_value_attribute/src/obj/dwarf2out.o] Error 1
